--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,16 @@ ul.menu-fullscreen li > a:hover{
 }
 
 
+#fullprofession{
+  width:1140px;
+  position: relative;
+  top:0;
+  margin:0 auto;
+  z-index: 9997;
+}
+
+
+
 #fullscreen{
   display:none;
   position:absolute;
