--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Merriweather Sans:300,400,700,900);
 body{background-color:#fff;font:normal 16px/22px Lato;color:#555;}
 p {padding-bottom:20px;}
 a:hover{text-decoration: none;}
@@ -19,7 +19,7 @@ html[xmlns] .clearfix {
 * html .clearfix {
 	height:1%;
 }
-h1,h2,h3,h4,h5,h6{font-family: Lato;margin: 0;padding: 0;}
+h1,h2,h3,h4,h5,h6{font-family: 'Merriweather Sans', sans-serif;;margin: 0;padding: 0;}
 h1{font-weight:300;font-size: 60px;line-height: 80px;}
 h2{font-weight:300;font-size: 40px;line-height:38px;margin-bottom:80px;}
 h3{font-weight:300;font-size: 35px;line-height:38px;margin-bottom:40px;}
